content/_generated-doc/3.27/config/quarkus-elytron-security-oauth2_quarkus.oauth2.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-oauth2_quarkus-oauth2-enabled]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-enabled[`quarkus.oauth2.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine if the OAuth2 extension is enabled. Enabled by default if you include the `elytron-security-oauth2` dependency, so this would be used to disable it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-oauth2_quarkus-oauth2-role-claim]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-role-claim[`quarkus.oauth2.role-claim`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.role-claim+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The claim that is used in the introspection endpoint response to load the roles.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_ROLE_CLAIM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_ROLE_CLAIM+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++scope+++`

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-client-id]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-client-id[`quarkus.oauth2.client-id`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.client-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The OAuth2 client id used to validate the token. Mandatory if the extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-client-secret]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-client-secret[`quarkus.oauth2.client-secret`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.client-secret+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The OAuth2 client secret used to validate the token. Mandatory if the extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_CLIENT_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_CLIENT_SECRET+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-introspection-url]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-introspection-url[`quarkus.oauth2.introspection-url`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.introspection-url+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The OAuth2 introspection endpoint URL used to validate the token and gather the authentication claims. Mandatory if the extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_INTROSPECTION_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_INTROSPECTION_URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-ca-cert-file]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-ca-cert-file[`quarkus.oauth2.ca-cert-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.ca-cert-file+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The OAuth2 server certificate file. _Warning_: this is not supported in native mode where the certificate must be included in the truststore used during the native image generation, see link:native-and-ssl.html[Using SSL With Native Executables].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_CA_CERT_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_CA_CERT_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-connection-timeout]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-connection-timeout[`quarkus.oauth2.connection-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.connection-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Client connection timeout for token introspection. Infinite if not set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-elytron-security-oauth2_quarkus-oauth2[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-elytron-security-oauth2_quarkus-oauth2-read-timeout]] [.property-path]##link:#quarkus-elytron-security-oauth2_quarkus-oauth2-read-timeout[`quarkus.oauth2.read-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oauth2.read-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Client read timeout for token introspection. Infinite if not set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-elytron-security-oauth2_quarkus-oauth2[icon:question-circle[title=More information about the Duration format]]
|

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-elytron-security-oauth2_quarkus-oauth2]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
